fix: Adding scrollbar if menu is too big

--- a/sources/menumodel/menulateral.css
+++ b/sources/menumodel/menulateral.css
@@ -51,6 +51,7 @@
     border: 0;
     width: 100%;
     cursor: pointer;
+    margin-bottom: 8px;
 }
 
 #imgButton {
@@ -96,12 +97,17 @@
     padding: 0 24px;
 }
 
-.navbar ul {
-	padding: 0;
+.navbar > ul {
+    display: inline-flex;
+    flex-direction: column;
+    gap: 8px 0;
+    justify-content: space-between;
 	overflow-x: hidden;
     overflow-y: auto;
-    max-height: 700px;
+    max-height: 100vh;
 	background: #ececec;
+    box-sizing: border-box;
+    padding: 64px 8px 64px 0;
 }
 
 .navbar ul::-webkit-scrollbar {
@@ -118,13 +124,12 @@
 
 .navbar ul > li {
 	list-style-type: none;
-	padding: 0 5px;
-    margin: 7px 0;
+    line-height: 0;
 }
 
 li.itemmenu {
 	color: #494949;   
-	font-family: 'aux-pro', sans-serif;   
+	font-family: 'Aaux ProMedium', sans-serif;   
 }
 
 #list {
@@ -132,42 +137,34 @@ li.itemmenu {
 	overflow: hidden;
 	transition: 0.6s ease;
 	text-align: right;
-	list-style-position: inside;
 	padding: 0px;
-	font-family: 'aux-pro', sans-serif;
+	font-family: 'Aaux ProMedium', sans-serif;
+    display: inline-flex;
+    flex-direction: column;
+    gap: 16px 0;
 }
 
 li.itemmenu.opened #list {
     max-height: 25em;
 }
 
+#list li {
+    margin: 6px 0;
+}
+
 #list a {
-	padding: 0px;
 	color: #999;
 	font-size: 20px;
-	font-family: 'aux-pro', sans-serif;
+	font-family: 'Aaux ProMedium', sans-serif;
 	font-weight: 400;
 	transition: 0.2s;
     text-decoration: none;
     cursor: pointer;
+    
 }
 
 #list a:hover {
 	color: #494949;
-}
-
-@media screen and (max-height: 800px) {
-	.navbar ul {max-height: 500px;}
-}
-
-@media screen and (max-height: 600px) {
-	.navbar ul {max-height: 350px;}
-}
-
-@media screen and (max-height: 450px) {
-	#sidenav a {font-size: 18px;}
-	
-	.navbar ul {max-height: 180px;}
 }
 
 #customLoadingScreenDiv:after {
